# powsybl-metrix

./: .gitignore  DOC.md  README.md  THIRD-PARTY.txt  install.sh  metrixOut.txt  pom.xml  toto
metrix-simulator/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  main.dox  release_note.txt  sonar-project.properties
metrix-simulator/LU/: CMakeLists.txt
metrix-simulator/LU/include/: lu_constantes_externes.h  lu_constantes_internes.h  lu_define.h  lu_definition_arguments.h  lu_fonctions.h  lu_sys.h
metrix-simulator/LU/src/: lu_allouer_lu.c  lu_calculs_markowitz.c  lu_classement_lignes_colonnes.c  lu_construire_probleme.c  lu_elimination_une_ligne.c  lu_elimination_une_ligne_cas_symetrique.c  lu_elimination_une_ligne_matrice_pleine.c  lu_elimination_une_ligne_turbo.c  lu_factorisation.c  lu_factorisation_calculs.c  lu_inconnues_indeterminees.c  lu_init_tableaux_null.c  lu_memoire.h  lu_refactorisation.c  lu_refactorisation_de_la_matrice.c  lu_reorganisation_chainages.c  lu_resolution.c  lu_resolution_hyper_creux.c  lu_scaling.c  lu_scan_ligne.c  lu_scan_ligne_cas_symetrique.c  lu_scan_ligne_matrice_pleine.c  lu_scan_super_ligne.c  lu_scan_super_ligne_cas_symetrique.c  lu_selection_pivot.c  lu_selection_pivot_diagonal.c  lu_selection_pivot_matrice_pleine.c  lu_super_lignes_calculs_hashcode.c  lu_super_lignes_creations_et_fusions.c  lu_super_lignes_declenchement.c  lu_super_lignes_detection.c  lu_super_lignes_merge_toutes_super_lignes.c  lu_super_lignes_modifications.c  lu_super_lignes_reallocs.c  lu_switch_markowitz.c  lu_update.c  memstats.c  memstats.h
metrix-simulator/PNE/: CMakeLists.txt
metrix-simulator/PNE/include/: pne_constantes_externes.h  pne_constantes_internes.h  pne_define.h  pne_definition_arguments.h  pne_fonctions.h  pne_sys.h  spx_constantes_externes.h  spx_constantes_internes.h  spx_define.h  spx_definition_arguments.h  spx_fonctions.h  spx_sys.h
metrix-simulator/PNE/src/: bb_affichages_traces.c  bb_alloc_desalloc_probleme.c  bb_balayage_en_largeur.c  bb_balayage_en_profondeur.c  bb_best_first.c  bb_branch_and_bound.c  bb_branch_and_bound_calculs.c  bb_choix_des_variables_a_instancier.c  bb_controler_les_coupes_non_prises_en_compte.c  bb_creation_noeud.c  bb_creer_les_noeuds_fils.c  bb_define.h  bb_eliminer_les_noeuds_sous_optimaux.c  bb_evaluer_en_profondeur_critiques.c  bb_evaluer_fils_du_meilleur_minorant.c  bb_exploration_rapide_en_profondeur.c  bb_fonctions.h  bb_inserer_les_coupes.c  bb_memoire.h  bb_nettoyer_arbre.c  bb_nettoyer_les_coupes.c  bb_rechercher_le_meilleur_minorant.c  bb_rechercher_le_noeud_avec_meilleur_ratio_fractionnaire.c  bb_rechercher_le_noeud_le_moins_fractionnaire.c  bb_resoudre_le_probleme_relaxe.c  bb_stocker_les_coupes_du_noeud.c  bb_supprimer_les_descendants_dun_noeud.c  bb_sys.h  mem_alloc_super_tableau.c  mem_allocateur.h  mem_fonctions.h  mem_free.c  mem_init_quit.c  mem_malloc.c  mem_realloc.c  mem_sys.h  mps_define.h  mps_extern_global.h  mps_global.h  pi_alloc_matrice.c  (+298 more)
metrix-simulator/cmake/: CloneUrl.cmake  CodeCoverage.cmake  FindSuiteSparse.cmake  GetPatchCommand.cmake  InstallLib.cmake  tnr.cmake  version.h.in
metrix-simulator/docs/: logging.plantuml  main.plantuml
metrix-simulator/etc/: METRIX.dic  METRIX_En.dic
metrix-simulator/log/: CMakeLists.txt
metrix-simulator/log/include/metrix/: log.h
metrix-simulator/log/src/: logger.cpp
metrix-simulator/runs/: ._s0  ._s1  ._s2  lp_Donnees_Probleme_Solveur.txt  old_lp_Donnees_Probleme_Solveur.txt  transformMPS.py
metrix-simulator/runs/LF+_HVDC_res/: lp_Donnees_Probleme_Solveur.txt
metrix-simulator/runs/LF+_TD_res/: ._s0  Donnees_Probleme_Solveur.mps
metrix-simulator/runs/LF+_res/: Donnees_Probleme_Solveur.mps  metrixOut.txt
metrix-simulator/runs/OPF_res/: ._s0  ._s1  ._s2  Donnees_Probleme_Solveur.mps
metrix-simulator/src/: calcul.h  calculeEmpilementGroupes.cpp  calculecrirecontraintesdodu.cpp  calculmacrofonctions.cpp  calculrepports.cpp  connexite.cpp  cte.cpp  cte.h  margin_variations_compute.cpp  margin_variations_compute.h  metrix.cpp  metrix2assess.cpp  parametres.h  pne.h  prototypes.h  reseau.cpp  reseau.h  status.h  variante.h
metrix-simulator/src/compute/: isolver.h  solver.cpp  solver.h
metrix-simulator/src/config/: configuration.cpp  configuration.h  constants.h  converter.cpp  converter.h  input_configuration.cpp  input_configuration.h  parades_configuration.cpp  parades_configuration.h  variant_configuration.cpp  variant_configuration.h  version_def.cpp  version_def.h
metrix-simulator/src/err/: IoDico.cpp  IoDico.h  error.cpp  error.h
metrix-simulator/src/options/: options.cpp  options.h
metrix-simulator/src/ortools/: solver.cpp  solver.h
metrix-simulator/tests/: CMakeLists.txt  CTestCustom.cmake
metrix-simulator/tests/LODF_PTDF/LODF_PTDF_matrices/: VariantSet.csv  _Readme.txt
metrix-simulator/tests/cbc/: CMakeLists.txt
metrix-simulator/tests/cbc/divers/: CMakeLists.txt
metrix-simulator/tests/cbc/effacements/: CMakeLists.txt
metrix-simulator/tests/cbc/groupes/: CMakeLists.txt
metrix-simulator/tests/cbc/hvdc/: CMakeLists.txt
metrix-simulator/tests/common/: CMakeLists.txt
metrix-simulator/tests/connexite/: CMakeLists.txt
metrix-simulator/tests/curatif/: CMakeLists.txt
metrix-simulator/tests/divers/: CMakeLists.txt
metrix-simulator/tests/effacements/: CMakeLists.txt
metrix-simulator/tests/groupes/: CMakeLists.txt
metrix-simulator/tests/hvdc/: CMakeLists.txt
metrix-simulator/tests/load_flow/: CMakeLists.txt  _Readme.txt
metrix-simulator/tests/overload/: CMakeLists.txt  _Readme.txt
metrix-simulator/tests/pertes/: CMakeLists.txt
metrix-simulator/tests/seuils/: CMakeLists.txt
metrix-simulator/tests/sirius/: CMakeLists.txt
metrix-simulator/tests/td/: CMakeLists.txt
metrix-simulator/tests/variables_couplees/: CMakeLists.txt
metrix-simulator/tests/variantes_regroupees/: CMakeLists.txt
metrix-simulator/tests/xpress/: CMakeLists.txt  gen.sh
metrix-simulator/util/: FilesAnonymazer.py  UpdateReferences.py  compare_mip_solvers.py  parse_mip_logs.py  release.py
(+3170 files in other folders)
