message(STATUS "LIBRARIE PNE")

set(PNE_SOURCES
    src/bb_affichages_traces.c 
    src/pne_probing.c 
    src/bb_alloc_desalloc_probleme.c 
    src/pne_probing_gub.c 
    src/bb_balayage_en_largeur.c 
    src/pne_probing_modifier_matrice_des_contraintes.c 
    src/bb_balayage_en_profondeur.c 
    src/pne_probing_nodepresolve_alloc.c 
    src/bb_best_first.c 
    src/pne_probing_nodepresolve_utilitaires.c 
    src/bb_branch_and_bound.c 
    src/pne_probing_variables_a_instancier.c 
    src/bb_branch_and_bound_calculs.c 
    src/pne_rand.c 
    src/bb_choix_des_variables_a_instancier.c 
    src/pne_recherche_groupes_de_variables_equivalentes.c 
    src/bb_controler_les_coupes_non_prises_en_compte.c 
    src/pne_recherche_symetries.c 
    src/bb_creation_noeud.c 
    src/pne_recuperer_le_probleme_initial.c 
    src/bb_creer_les_noeuds_fils.c 
    src/pne_recuperer_solution_et_critere.c 
    src/bb_eliminer_les_noeuds_sous_optimaux.c 
    src/pne_reduced_cost_fixing.c 
    src/bb_evaluer_en_profondeur_critiques.c 
    src/pne_reduced_cost_fixing_graphe_de_conflit.c 
    src/bb_evaluer_fils_du_meilleur_minorant.c 
    src/pne_reduced_cost_fixing_noeud_racine.c 
    src/bb_exploration_rapide_en_profondeur.c 
    src/pne_relancer_un_branch_and_bound.c 
    src/bb_inserer_les_coupes.c 
    src/pne_relance_simplexe_au_noeud_racine.c 
    src/bb_nettoyer_arbre.c 
    src/pne_relation_ordre.c 
    src/bb_nettoyer_les_coupes.c 
    src/pne_round.c 
    src/bb_rechercher_le_meilleur_minorant.c 
    src/pne_solve_pb_rlx_pi.c 
    src/bb_rechercher_le_noeud_avec_meilleur_ratio_fractionnaire.c 
    src/pne_solve_pb_rlx_spx_dual.c 
    src/bb_rechercher_le_noeud_le_moins_fractionnaire.c 
    src/pne_solve_pb_rlx_spx_primal.c 
    src/bb_resoudre_le_probleme_relaxe.c 
    src/pne_solveur.c 
    src/bb_stocker_les_coupes_du_noeud.c 
    src/pne_solveur_calculs.c 
    src/bb_supprimer_les_descendants_dun_noeud.c 
    src/pne_solveur_sous_probleme.c 
    src/mem_alloc_super_tableau.c 
    # src/pne_standalone.c not integrated in linking library
    src/mem_free.c 
    src/pne_strong_branching.c 
    src/mem_init_quit.c 
    src/pne_strong_branching_classer_le_resultat.c 
    src/mem_malloc.c 
    src/pne_substitution_variable_entiere.c 
    src/mem_realloc.c 
    src/pne_trier_les_coupes_calculees.c 
    src/pi_alloc_matrice.c 
    src/pne_two_step_mir.c 
    src/pi_alloc_probleme.c 
    src/pne_verifier_admissibilite.c 
    src/pi_armijo.c 
    src/pne_verifier_faisabilite_contrainte_egalite.c 
    src/pi_calculs_utilitaires.c 
    src/prs_allocations.c 
    src/pi_calstaf.c 
    src/prs_alloc_presolve.c 
    src/pi_cremat.c 
    src/prs_ameliorer_bornes.c 
    src/pi_cremat_systeme_augmente.c 
    src/prs_ameliorer_contraintes_de_bornes_variables.c 
    src/pi_gradient_conjugue.c 
    src/prs_analyse_graphe_de_conflits.c 
    src/pi_incrementation.c 
    src/prs_appliquer_les_contraintes_de_borne_variables.c 
    src/pi_init_transposee.c 
    src/prs_augmenter_le_creux.c 
    src/pi_initxs.c 
    src/prs_augmenter_le_creux_colonnes.c 
    src/pi_md_equa.c 
    src/prs_calcul_borne_sur_variable_avec_une_contrainte.c 
    src/pi_qinit.c 
    src/prs_calcul_borne_sur_variable_duale_avec_une_variable.c 
    src/pi_quamin.c 
    src/prs_calculer_bornes_contraintes.c 
    src/pi_quamin_calculs.c 
    src/prs_classer_ligne_colonnes.c 
    src/pi_reconstruire_matrice_a_resoudre.c 
    src/prs_colonnes_colineaires.c 
    src/pi_resolution.c 
    src/prs_contraintes_colineaires.c 
    src/pi_resolution_systeme_augmente.c 
    src/prs_contraintes_inactives.c 
    src/pi_restitution_des_resultats.c 
    src/prs_contruire_graphe_DIMACS.c 
    src/pi_scaling.c 
    src/prs_desactiver_contrainte.c 
    src/pi_sos1s2.c 
    src/prs_desactiver_contraintes_de_bornes_variables.c 
    src/pi_split_colonnes.c 
    src/prs_determiner_le_type_de_borne_pour_dual.c 
    src/pi_split_contraintes.c 
    src/prs_DM_A.c 
    src/pne_allocations_pour_le_postsolve.c 
    src/prs_DM.c 
    src/pne_alloc_probleme.c 
    src/prs_DM_factoriser_matrice.c 
    src/pne_ameliorer_coefficients.c 
    src/prs_DM_resoudre_dual.c 
    src/pne_analyse_initiale_knapsack.c 
    src/prs_DM_resoudre_primal.c 
    src/pne_analyse_initiale_variable_bounds.c 
    src/prs_DM_resoudre_systeme_transpose.c 
    src/pne_archiver_la_solution_courante.c 
    src/prs_dominance_variables.c 
    src/pne_augmenter_le_creux_matrice.c 
    src/prs_enlever_contraintes_inactives.c 
    src/pne_bb_solve_pb_rlx.c 
    src/prs_fixer_une_variable_a_une_valeur.c 
    src/pne_bornes_variables_substitution_de_variables.c 
    src/prs_fixer_variables_sur_critere.c 
    src/pne_calcul_coupes_dintersection.c 
    src/prs_init_presolve.c 
    src/pne_calculer_la_valeur_du_critere.c 
    src/prs_maj_variable_duale.c 
    src/pne_calculer_les_coupes.c 
    src/prs_mettre_a_jour_bornes_des_variables.c 
    src/pne_calculer_les_gomory.c 
    src/prs_mettre_a_jour_bornes_des_variables_duales.c 
    src/pne_calculer_restrictions_bornes.c 
    src/prs_nettoyer_graphe_de_conflit.c 
    src/pne_calcul_plus_grand_et_plus_petit_terme.c 
    src/prs_presolve.c 
    src/pne_chainage_transposee.c 
    src/prs_singleton_colonne.c 
    src/pne_choix_des_variables_a_instancier.c 
    src/prs_singleton_ligne.c 
    src/pne_classer_coeff_contraintes_ordre_decroissant.c 
    src/prs_substituer_variables.c 
    src/pne_cliques_controle_avant_resolution.c 
    src/prs_substituer_variables_non_bornees.c 
    src/pne_cliques_determination.c 
    src/prs_supprimer_contraintes_sans_variables.c 
    src/pne_cliques_egalite.c 
    src/prs_variable_probing.c 
    src/pne_cliques_substitution_de_variables.c 
    src/prs_variables_duales_ameliorer_bornes.c 
    src/pne_cliques_violees.c 
    src/prs_variables_duales_et_couts_reduits.c 
    src/pne_clone_spx_noeud_racine.c 
    src/prs_variables_duales_non_bornees.c 
    src/pne_colonnes_colineaires.c 
    src/prs_variables_hors_contraintes.c 
    src/pne_colonnes_colineaires_par_noeud.c 
    src/prs_variables_non_bornees.c 
    src/pne_compacter_matrice_des_contraintes.c 
    src/spx_ajouter_coupes.c 
    src/pne_conflict_graph_alloc.c 
    src/spx_allouer_probleme.c 
    src/pne_conflict_graph_extensions.c 
    src/spx_appliquer_eta_vecteurs.c 
    src/pne_conflict_graph_fixer_les_voisins_dun_noeud.c 
    src/spx_appliquer_eta_vecteurs_transposee.c 
    src/pne_conflict_graph_fixer_variables.c 
    src/spx_calcul_borne_auxiliaire.c 
    src/pne_conflict_graph_MAJ.c 
    src/spx_calcul_coupes_dintersection.c 
    src/pne_conflict_graph_substitution_de_variables.c 
    src/spx_calcul_couts_reduits.c 
    src/pne_conflict_graph_supprimer_un_noeud.c 
    src/spx_calcul_du_cout.c 
    src/pne_contraintes_colineaires.c 
    src/spx_calcul_du_cout_simplifie.c 
    src/pne_contraintes_de_borne_inf_violees.c 
    src/spx_calculer_a_barre_s.c 
    src/pne_contraintes_de_borne_variable_violees.c 
    src/spx_calculer_b_barre.c 
    src/pne_contraintes_dordre_violees.c 
    src/spx_calculer_erbmoins1.c 
    src/pne_coupe_de_probing.c 
    src/spx_calculer_pi.c 
    src/pne_coupes_colineaires.c 
    src/spx_calculer_une_gomory.c 
    src/pne_coupes_de_couts_reduits_violees.c 
    src/spx_calcul_MIR_pour_gomory_et_intersection.c 
    src/pne_coupes_de_probing_substitution_de_variables.c 
    src/spx_chainage_transposee.c 
    src/pne_coupes_de_probing_violees.c 
    src/spx_choix_variable_a_instancier_exploration_rapide_profondeur.c 
    src/pne_cover_knapsack.c 
    src/spx_construire_probleme.c 
    src/pne_cover_knapsack_combinaisons.c 
    src/spx_controle_contraintes_relaxees.c 
    src/pne_cover_knapsack_combinaisons_complexes.c 
    src/spx_creation_noeuds_en_exploration_rapide.c 
    src/pne_cover_knapsack_graphe_lifting.c 
    src/spx_dual_calculer_nbarre.c 
    src/pne_cover_knapsack_lifting.c 
    src/spx_dual_calculer_nbarre_hyper_creux.c 
    src/pne_cover_knapsack_simple.c 
    src/spx_dual_calculer_nbarrer_standard.c 
    src/pne_detection_des_contraintes_mixtes.c 
    src/spx_dual_choix_variable_entrante.c 
    src/pne_detection_des_gub.c 
    src/spx_dual_choix_variable_sortante.c 
    src/pne_detection_des_variables_big_M.c 
    src/spx_dual_comparer_abarre_et_nbarre.c 
    src/pne_determiner_les_variables_fractionnaires.c 
    src/spx_dual_confirmer_dual_non_borne.c 
    src/pne_dominance_variables_entieres.c 
    src/spx_dual_construire_base_initiale.c 
    src/pne_ecrire_jeu_de_donnees_mps.c 
    src/spx_dual_controle_des_bornes_auxiliaires.c 
    src/pne_ecrire_presolved_mps.c 
    src/spx_dual_controle_dual_non_borne.c 
    src/pne_empilement_par_couts_reduits.c 
    src/spx_dual_controle_optimalite.c 
    src/pne_enlever_tout_petits_termes.c 
    src/spx_dual_crash_base.c 
    src/pne_enrichir_probleme_avec_coupe.c 
    src/spx_dual_epurer_la_base.c 
    src/pne_fixation_sur_critere.c 
    src/spx_dual_phase_1_calculer_v.c 
    src/pne_gomory_negligees.c 
    src/spx_dual_phase_1_choix_variable_entrante.c 
    src/pne_gomory_negligees_violees.c 
    src/spx_dual_phase_1_choix_variable_sortante.c 
    src/pne_granularite_contraintes.c 
    src/spx_dual_phase_1_positionner_les_variables.c 
    src/pne_granularite_objectif.c 
    src/spx_dual_phase_1_simplexe.c 
    src/pne_graphe_substitution_de_variables.c 
    src/spx_dual_pivotages_complementaires.c 
    src/pne_gub.c 
    src/spx_dual_reconstruire_une_base.c 
    src/pne_heuristique.c 
    src/spx_dual_simplexe.c 
    src/pne_heuristique_pilotage.c 
    src/spx_dual_steepest.c 
    src/pne_heuristique_recherche_en_profondeur.c 
    src/spx_dual_strong_branching.c 
    src/pne_heuristique_resolution_branch_and_bound_reduit.c 
    src/spx_dual_strong_branching_GUB.c 
    src/pne_heuristique_RINS.c 
    src/spx_dual_supprimer_les_bornes_auxilaires.c 
    src/pne_heuristique_utilitaires.c 
    src/spx_ecrire_probleme_mps.c 
    src/pne_heuristique_variables_entieres_fixees.c 
    src/spx_factoriser_la_base.c 
    src/pne_init_pne.c 
    src/spx_faire_changement_base.c 
    src/pne_inserer_une_contrainte.c 
    src/spx_fixer_x_fonction_de_position.c 
    src/pne_knapsack_combinaison_de_contraintes.c 
    src/spx_gestion_bases_en_exploration_rapide.c 
    src/pne_knapsack_lift_variable_continue.c 
    src/spx_gestion_listes_des_variables_EN_HORS_base.c 
    src/pne_knapsack_negligees.c 
    src/spx_gestion_temps_de_calcul.c 
    src/pne_knapsack_negligees_violees.c 
    src/spx_get_tableau_row.c 
    src/pne_knapsack_sur_coupe.c 
    src/spx_heuristique_arrondis.c 
    src/pne_la_valeur_est_entiere.c 
    src/spx_init_indicateurs_hypercreux.c 
    src/pne_lire_jeu_de_donnees_mps.c 
    src/spx_instancier_variable_dans_simplexe.c 
    src/pne_mac.c 
    src/spx_mettre_a_jour_b_barre.c 
    src/pne_majorant_knapsack.c 
    src/spx_mettre_a_jour_la_base.c 
    src/pne_matrice_substitution_de_variables.c 
    src/spx_modifier_chainage_transposee.c 
    src/pne_MIR_agregation.c 
    src/spx_modifier_couts_ou_second_membre.c 
    src/pne_mise_a_jour_seuil_coupes.c 
    src/spx_modifier_probleme.c 
    src/pne_node_dm_A.c 
    src/spx_ordonner_stockage_matrice.c 
    src/pne_node_dm_factoriser_matrice.c 
    src/spx_recuperer_solution.c 
    src/pne_node_dm_resoudre_primal.c 
    src/spx_recuperer_solution_exploration_rapide_en_profondeur.c 
    src/pne_node_presolve.c 
    src/spx_relaxer_contraintes.c 
    src/pne_node_presolve_calculer_bornes_des_contraintes.c 
    src/spx_resolution_de_systeme.c 
    src/pne_node_presolve_comparer_contraintes.c 
    src/spx_resolution_de_systeme_transposee.c 
    src/pne_normaliser_une_coupe.c 
    src/spx_resoudre_by_egal_a.c 
    src/pne_odd_hole_determination.c 
    src/spx_resoudre_ub_egal_c.c 
    src/pne_odd_holes_violes.c 
    src/spx_sauvegardes_branch_and_bound.c 
    src/pne_pgcd.c 
    src/spx_scaling.c 
    src/pne_post_probing.c 
    src/spx_simplexe.c 
    src/pne_postsolve.c 
    src/spx_simplexe_calculs.c 
    src/pne_postsolve_si_presolve_uniquement.c 
    src/spx_simplexe_generalise.c 
    src/pne_presolve_simplifie_bornes_variables.c 
    # src/spx_standalone.c not integrated in linking library
    src/pne_presolve_simplifie.c 
    src/spx_supprimer_une_borne_auxilaire.c 
    src/pne_presolve_simplifie_colonnes_colineaires.c 
    src/spx_translater_bornes.c 
    src/pne_presolve_simplifie_variable_probing.c 
    src/spx_verifier_a_barre_s.c 
    src/pne_probing_analyse_liste_de_contraintes.c 
    src/spx_verifier_admissibilite_duale.c 
    src/pne_probing_bornes_variables.c 
    src/spx_verifier_erbmoins1.c 

    src/bb_define.h 
    src/mem_fonctions.h 
    src/pi_constantes_externes.h 
    src/pi_sys.h 
    src/prs_sys.h 
    src/bb_fonctions.h 
    src/mem_sys.h 
    src/pi_define.h 
    src/pne_memoire.h 
    src/spx_memoire.h 
    src/bb_memoire.h 
    src/mps_define.h 
    src/pi_definition_arguments.h 
    src/prs_define.h 
    src/bb_sys.h 
    src/mps_extern_global.h 
    src/pi_fonctions.h 
    src/prs_fonctions.h 
    src/mem_allocateur.h 
    src/mps_global.h 
    src/pi_memoire.h 
    src/prs_memoire.h 
    )

add_library(pne STATIC ${PNE_SOURCES})
target_include_directories(pne
    PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>

    metrix::lu
    
    PRIVATE
    src
    )

target_link_libraries(pne
    metrix::lu
)

add_library(metrix::pne ALIAS pne)
